合并所有的提交，准备开始新的测试。

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  Master 
-  <p>我是新修改的 2.0.0</p>
-  <p>2 update 1</p>
-  <p>2 update 2</p>
-  <p>2 update 3</p>
-  <p>2 update 4</p>
+  我是 4.0 的第四次提交。
 </body>
 </html>
