我是 MAIN 最新的提交。

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  我是新的MAIN
-  <p>我是新的local1</p>
-  <p>我是新的local2</p>
+  我是 MAIN 最新的提交。
 </body>
 </html>
